--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "tsdx lint"
+    "*": "yarn lint --check"
   },
   "prettier": {
     "printWidth": 100,
